argo-workflow/ingress-tls-argo-workflow.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-workflow-gebi-link
  namespace: argocd
  annotations:
    konghq.com/protocols: https
    konghq.com/override: https-upstream
    kubernetes.io/ingress.class: kong
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: argo-workflow-gebi-link
    hosts:
    - argo-workflow.gebi.link
  rules:
  - host: argo-workflow.gebi.link
    http:
      paths:
      - path: /
        backend:
          serviceName: argo-server
          servicePort: 2746
